# ChangeLog for dev-perl/CPAN-Mini
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/CPAN-Mini/ChangeLog,v 1.36 2011/04/30 06:20:18 tove Exp $

*CPAN-Mini-1.111.5 (30 Apr 2011)

  30 Apr 2011; Torsten Veller <tove@gentoo.org> +CPAN-Mini-1.111.5.ebuild:
  Version bump

*CPAN-Mini-1.111.3 (20 Apr 2011)

  20 Apr 2011; Torsten Veller <tove@gentoo.org> +CPAN-Mini-1.111.3.ebuild:
  Version bump

*CPAN-Mini-1.111.1 (19 Feb 2011)

  19 Feb 2011; Torsten Veller <tove@gentoo.org> +CPAN-Mini-1.111.1.ebuild:
  Version bump

  07 Feb 2011; Torsten Veller <tove@gentoo.org> CPAN-Mini-1.111.ebuild:
  Correct MODULE_VERSION

*CPAN-Mini-1.111 (07 Feb 2011)

  07 Feb 2011; Robin H. Johnson <robbat2@gentoo.org> +CPAN-Mini-1.111.ebuild:
  Version bump via perl-bump experimental tool.

*CPAN-Mini-1.110 (29 Jan 2011)
  
  29 Jan 2011; Torsten Veller <tove@gentoo.org> +CPAN-Mini-1.110.ebuild,
  -CPAN-Mini-1.100630.ebuild:
  Version bump. Cleanup. Looks like a downgrade

*CPAN-Mini-1.100630 (05 Mar 2010)

  05 Mar 2010; Torsten Veller <tove@gentoo.org> +CPAN-Mini-1.100630.ebuild:
  Version bump

  28 Jan 2010; Torsten Veller <tove@gentoo.org> CPAN-Mini-0.576.ebuild:
  Fix LICENSE: same terms as perl (#301969)

  24 Dec 2009; Torsten Veller <tove@gentoo.org> -CPAN-Mini-0.571.ebuild:
  Cleanup

  14 Nov 2009; Torsten Veller <tove@gentoo.org> CPAN-Mini-0.576.ebuild:
  Depend on virtual/perl-File-Path

*CPAN-Mini-0.576 (13 Nov 2009)

  13 Nov 2009; Robin H. Johnson <robbat2@gentoo.org>
  +CPAN-Mini-0.576.ebuild:
  Version bump via perl-bump experimental tool.

  19 Jul 2009; Torsten Veller <tove@gentoo.org> CPAN-Mini-0.562.ebuild,
  CPAN-Mini-0.571.ebuild:
  IO-Compress replaces Compress-Zlib

  18 Nov 2008; Torsten Veller <tove@gentoo.org> CPAN-Mini-0.562.ebuild,
  CPAN-Mini-0.571.ebuild:
  New virtuals: Compress-Zlib

  02 Aug 2008; Torsten Veller <tove@gentoo.org> -CPAN-Mini-0.40.ebuild,