@@ -8,19 +8,21 @@ DIST CPAN-Mini-1.111.tar.gz 21173 RMD160 51c23ea93c424fcf035541951828dcecb8537ec
 DIST CPAN-Mini-1.111001.tar.gz 21236 RMD160 45a7c7dc3ff645cf3e0fc603d3795f2a47b64c3f SHA1 289055e55738f6576ed1c948a93fc65b299e959b SHA256 9aa0950428576037714293eb69642434e62a0ad5406db97c1ba9049718dd2c29
 DIST CPAN-Mini-1.111003.tar.gz 21787 RMD160 a6bf3a2ee1ee3d8838c83b514a04732b1cbe3be2 SHA1 f91e1f1f23545bcb6c452024c8be81fa923c7c8f SHA256 bbfec966d9ac339bedafe6f749198a33e24d5436c4409c8cefdee6d986af6d56
 DIST CPAN-Mini-1.111005.tar.gz 23051 RMD160 55092284344b24816863a901207b788f52f70175 SHA1 362ee0b1d72bb0934d871aa2b4a243ad76810c0b SHA256 fab66ef2d5c763e45bd8d1270a4bb11577ff6241071c8ba5e6cb4d87d8140fa2
+DIST CPAN-Mini-1.111006.tar.gz 23091 RMD160 fd17010b43bd47b723e6fd974414b9b6394a8526 SHA1 138d5e25d40b2277a8e89dfe12da431bf4b751cd SHA256 e918e62e95278497c1384324cdd4b1d8e20799315ca9a641cfb1bbdd9926d9bb
 EBUILD CPAN-Mini-0.562.ebuild 595 RMD160 6ba1875871676a1f0e3cdfdc2be9d02458ae11a1 SHA1 169fa6599ccd0081029b32f12fe15eca69e1f4cd SHA256 4102e8d82e37447e15380f3ead746b162a72e3614644efcaa2678422ea3b3146
 EBUILD CPAN-Mini-0.576.ebuild 517 RMD160 7eb51e57a5b867c972be4e7b5b1dd96874f73e95 SHA1 e30f2889b8dc3ae8b74abf1490cc2f7d30d3d9b8 SHA256 402255068febbf625c76ff96a73ca5628901614dbf2dfba6fa143e5a6cfcf156
 EBUILD CPAN-Mini-1.110.ebuild 559 RMD160 656d461294353ae8e4ae4c9ba20f214115c0517f SHA1 60e24fcc3aa4449d4e5152c3075765034171eeff SHA256 863f5cf2e00fddd3d6b0f20e9a6c2b25bd0c475b3e026c3daafbc5d8bd781221
 EBUILD CPAN-Mini-1.111.1.ebuild 564 RMD160 9361e7795014aa87f4de200e8b22e395f7fc0fba SHA1 2f625c0fbb65cc76ecaccd45f93c8ed4556449a1 SHA256 cf156dbaacd506befbf3ec02a14dd71494721555ff5dfc819c165dc20691a780
 EBUILD CPAN-Mini-1.111.3.ebuild 564 RMD160 398eff338b8fab53bb99d25009285bbda0518afb SHA1 6e8ab447a539a48113a9af1e8a3d2de571fa9192 SHA256 bd525b84f622dfad921645e6d799ad6bc4c3b3da470ceb4b3b87512e54fa9bc6
 EBUILD CPAN-Mini-1.111.5.ebuild 564 RMD160 8c0666bbf13baf4e5a18e74875ccf640ef0c259d SHA1 31ea26d7c715682d0b4b2c93714cea35c23e9e77 SHA256 9bc4ada0a44214c6c29ee69dc924eaa80298298dd2075b3f82b6dfc5bb82e92d
+EBUILD CPAN-Mini-1.111.6.ebuild 611 RMD160 33eb5586f95985af1e427bdf2354d58b9718b756 SHA1 c5db3e700407b50bd1f8653ebde4dab57906c421 SHA256 6208a8b9cd3324194ef05f9805858cf6347cfca587049b1a7d59ecbcf737a486
 EBUILD CPAN-Mini-1.111.ebuild 559 RMD160 2a9f07bf628de9fef668158483f7a2b8e94eb897 SHA1 025a437c5685defe15e3d6fdffa70173f2c7ade8 SHA256 3e9074f0c4c0e82f04a73ca90e571dbbd8e8d2439714e9b7b753703e57bb3bed
-MISC ChangeLog 4696 RMD160 07844d819110215eb364d9e364096d014b1caad2 SHA1 92b12a79d0ad102d2becfafd84729eab2961fd79 SHA256 bb2b6c8db17039c7fd26f6563639d4a938b2a38f851746e3487a1152216b51bd
+MISC ChangeLog 4821 RMD160 ac930f8e61c6910342059ec8748aa21237772558 SHA1 3095234ea9659285c57676e690356810d5d17972 SHA256 adc566be0fd14a9a88eba12588a90bcee87c09373827914fdbdc22239329f89f
 MISC metadata.xml 357 RMD160 2a9417b226b9c3dde3a3df3838b38d0326c4c6fd SHA1 11519cfffcd3608d53429819147327d65e1aeed7 SHA256 5141a3aad6e70786b8189c1db05c4b1abd9103e6379ceaba97060e487e1d2bb0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk27qigACgkQV3J2n04EauwyVQCfXn7dxd9HTw5zIbC68vElwVEB
-rTkAnRK5n2++hjFv1FnxheyfzK3A5vxs
-=Zy61
+iEYEAREIAAYFAk29iU0ACgkQV3J2n04EauyHDACbBlafIDLvDjtIm6FXYhriQac3
+05gAoLhfPkwK/MYZdl/6W3TZeL+I2mGb
+=vzia
 -----END PGP SIGNATURE-----
